--- a/style.css
+++ b/style.css
@@ -1,52 +1,48 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
 body {
-  display: flex;
-  font-size: clamp(5vh, 3rem, 0.5rem);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-}
-
-button {
-  font-size: inherit;
-  border: none;
-  background: transparent;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+  font-family: Tahoma, Geneva, Verdana, sans-serif;
 }
 
 main {
-  padding: 4rem;
+  margin-inline: auto;
+  max-width: 320px;
+}
+
+.scores {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: space-between;
-  height: 100%;
-  width: 100%;
+  margin-bottom: 0.5em;
+  font-size: 1.5em;
 }
 
-#players-score,
-#choice {
+.result {
+  min-height: 60px;
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: 600;
+  white-space: pre-line;
+}
+
+.choices {
   display: flex;
-  width: 100%;
-  gap: 1rem;
-}
-
-#players-score {
-  justify-content: space-between;
-}
-
-#choice {
+  gap: 0.5em;
   justify-content: center;
+}
+
+.choices button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+  flex-direction: column;
+  min-height: 100px;
+  min-width: 100px;
+  border-radius: 50%;
+  padding: 0;
+  cursor: pointer;
+}
+
+.choices span {
+  pointer-events: none;
+  display: block;
+  font-size: 3em;
 }
